; ModuleID = '/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_sntp.c_state_init.c'
source_filename = "/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_sntp.c_state_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32, i32, i8*, i8*, i8* }

@state = common dso_local global %struct.TYPE_4__* null, align 8
@.str = private unnamed_addr constant [14 x i8] c"out of memory\00", align 1
@LUA_NOREF = common dso_local global i8* null, align 8
@IP_ADDR_ANY = common dso_local global i32 0, align 4
@ERR_OK = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [18 x i8] c"no port available\00", align 1
@on_recv = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32*)* @state_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @state_init(i32* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %4 = call i64 @malloc(i32 40)
  %5 = inttoptr i64 %4 to %struct.TYPE_4__*
  store %struct.TYPE_4__* %5, %struct.TYPE_4__** @state, align 8
  %6 = load %struct.TYPE_4__*, %struct.TYPE_4__** @state, align 8
  %7 = icmp ne %struct.TYPE_4__* %6, null
  br i1 %7, label %9, label %8

8:                                                ; preds = %1
  store i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0), i8** %2, align 8
  br label %49

9:                                                ; preds = %1
  %10 = load %struct.TYPE_4__*, %struct.TYPE_4__** @state, align 8
  %11 = call i32 @memset(%struct.TYPE_4__* %10, i32 0, i32 40)
  %12 = load i8*, i8** @LUA_NOREF, align 8
  %13 = load %struct.TYPE_4__*, %struct.TYPE_4__** @state, align 8
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %13, i32 0, i32 5
  store i8* %12, i8** %14, align 8
  %15 = load i8*, i8** @LUA_NOREF, align 8
  %16 = load %struct.TYPE_4__*, %struct.TYPE_4__** @state, align 8
  %17 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %16, i32 0, i32 4
  store i8* %15, i8** %17, align 8
  %18 = load i8*, i8** @LUA_NOREF, align 8
  %19 = load %struct.TYPE_4__*, %struct.TYPE_4__** @state, align 8
  %20 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %19, i32 0, i32 3
  store i8* %18, i8** %20, align 8
  %21 = call i32 (...) @udp_new()
  %22 = load %struct.TYPE_4__*, %struct.TYPE_4__** @state, align 8
  %23 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %22, i32 0, i32 2
  store i32 %21, i32* %23, align 8
  %24 = load %struct.TYPE_4__*, %struct.TYPE_4__** @state, align 8
  %25 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %24, i32 0, i32 2
  %26 = load i32, i32* %25, align 8
  %27 = icmp ne i32 %26, 0
  br i1 %27, label %29, label %28

28:                                               ; preds = %9
  store i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0), i8** %2, align 8
  br label %49

29:                                               ; preds = %9
  %30 = load %struct.TYPE_4__*, %struct.TYPE_4__** @state, align 8
  %31 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %30, i32 0, i32 2
  %32 = load i32, i32* %31, align 8
  %33 = load i32, i32* @IP_ADDR_ANY, align 4
  %34 = call i64 @udp_bind(i32 %32, i32 %33, i32 0)
  %35 = load i64, i64* @ERR_OK, align 8
  %36 = icmp ne i64 %34, %35
  br i1 %36, label %37, label %38

37:                                               ; preds = %29
  store i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.1, i64 0, i64 0), i8** %2, align 8
  br label %49

38:                                               ; preds = %29
  %39 = load %struct.TYPE_4__*, %struct.TYPE_4__** @state, align 8
  %40 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %39, i32 0, i32 2
  %41 = load i32, i32* %40, align 8
  %42 = load i32, i32* @on_recv, align 4
  %43 = load i32*, i32** %3, align 8
  %44 = call i32 @udp_recv(i32 %41, i32 %42, i32* %43)
  %45 = load %struct.TYPE_4__*, %struct.TYPE_4__** @state, align 8
  %46 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %45, i32 0, i32 0
  store i32 -1, i32* %46, align 8
  %47 = load %struct.TYPE_4__*, %struct.TYPE_4__** @state, align 8
  %48 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %47, i32 0, i32 1
  store i32 -1, i32* %48, align 4
  store i8* null, i8** %2, align 8
  br label %49

49:                                               ; preds = %38, %37, %28, %8
  %50 = load i8*, i8** %2, align 8
  ret i8* %50
}

declare dso_local i64 @malloc(i32) #1

declare dso_local i32 @memset(%struct.TYPE_4__*, i32, i32) #1

declare dso_local i32 @udp_new(...) #1

declare dso_local i64 @udp_bind(i32, i32, i32) #1

declare dso_local i32 @udp_recv(i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
